# Hive

./: README.md  pyproject.toml
Docs/: AGENTS.md  CHANGELOG.md  DESIGN.md
hive/: main.py
hive/core/: config.py  llm.py  log.py
hive/core/graph/: graph.py  router.py  state.py
hive/core/nodes/: browser.py  critic.py  planner.py  researcher.py  synthesizer.py
hive/core/tools/: citations.py  scraper.py  search.py
hive/db/: sessions.py
hive/tui/: app.py
hive/tui/screens/: history.py  home.py  research.py  settings.py  setup.py
hive/tui/styles/: main.tcss
hive/tui/widgets/: agent_panel.py  chat.py  citations.py  statusbar.py
tests/: test_citations.py  test_config.py  test_export.py  test_graph.py  test_llm.py  test_nodes.py  test_scraper.py  test_search.py  test_sessions.py
